Step 2: Added the RuleDao, the RecipeSuggestionsServiceImpl uses it